fabric/testdata/out/ing_spp-product-identity-put-internal-product-identities-skus-non-whitelisted-spp-product-identity-master-572.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/skipper-routes":"Weight(3)
      \u0026\u0026 Path(\"/internal-product-identities/skus\") \u0026\u0026 Method(\"PUT\")
      \u0026\u0026 Header(\"X-Forwarded-Proto\", \"https\") -\u003e status(403) -\u003e
      unverifiedAuditLog(\"sub\") -\u003e inlineContent(\"{\\\"title\\\":\\\"Gateway
      Rejected\\\",\\\"status\\\":403,\\\"detail\\\":\\\"Illegal attempt to access
      whitelisted route\\\"}\") -\u003e \u003cshunt\u003e"},"labels":{"controller-uid":"dd881b95-f979-11e8-968d-026f86c7c91a","deployment-id":"d-axm9b9h4emne2icuau68ss53s","pipeline-id":"l-gqkrnfckkaunnp4hd1ria2jz5"},"name":"spp-product-identity-put-internal-product-identities-skus-non-whitelisted-spp-product-identity-master-572","namespace":"default"},"spec":{"rules":[{"host":"spp-product-identity-master-572.smart-product-platform-test.zalan.do","http":{"paths":[{"backend":{"serviceName":"spp-p [...]
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/skipper-routes: Weight(3) && Path("/internal-product-identities/skus")
      && Method("PUT") && Header("X-Forwarded-Proto", "https") -> status(403) -> unverifiedAuditLog("sub")
      -> inlineContent("{\"title\":\"Gateway Rejected\",\"status\":403,\"detail\":\"Illegal
      attempt to access whitelisted route\"}") -> <shunt>
  creationTimestamp: "2021-10-28T16:04:16Z"
  generation: 1
  labels:
    controller-uid: dd881b95-f979-11e8-968d-026f86c7c91a
    deployment-id: d-axm9b9h4emne2icuau68ss53s
    pipeline-id: l-gqkrnfckkaunnp4hd1ria2jz5
  name: spp-product-identity-put-internal-product-identities-skus-non-whitelisted-spp-product-identity-master-572
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: spp-product-identity
    uid: dd881b95-f979-11e8-968d-026f86c7c91a
  resourceVersion: "1383840472"
  uid: 37d618f6-0214-4a97-be0f-6d92eee4f113
spec:
  rules:
  - host: spp-product-identity-master-572.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: spp-product-identity-master-572
            port:
              number: 8080
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
